# InspectionSheet_Generator

./: .flake8  .gitignore  pyproject.toml
app/: MainWindow.ui  app.py
